---
source: analyzer/tests/errors.rs
expression: errstr

---
error: `if` statement condition is not bool
  ┌─ tests/fixtures/errors/strict_boolean_if_else.fe:3:12
  │
3 │         if val:
  │            ^^^ this has type `u256`; expected type `bool`


